# Air-quality-project

./: .gitignore  .rust-analyzer.toml  Cargo.toml
esp32-firmware/: Cargo.toml  build.rs  sdkconfig.defaults
esp32-firmware/.cargo/: config.toml
esp32-firmware/.devcontainer/: Dockerfile  devcontainer.json
esp32-firmware/src/: main.rs
rpi-commander/: .env.example  Cargo.toml
rpi-commander/src/: main.rs
rpi-processor/: Cargo.toml  PREDICTOR_WEB_UI.md  SUNLIGHT_DETECTION.md  check_smartcore
rpi-processor/src/: anomalies.rs  fetcher.rs  main.rs  predictor.rs  predictor_web.html  predictor_web.rs  types.rs
shared-types/: Cargo.toml
shared-types/src/: lib.rs
