[package]
name = "esp32-firmware"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "esp32-firmware"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
shared-types = { path = "../shared-types", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
esp-idf-svc = {version = "0.51", features = ["experimental"]}
esp-idf-hal = "0.45.2"
embedded-hal = "1"
scd4x = "0.4.1"
anyhow = "1"
embedded-svc = "0.28"

[build-dependencies]
embuild = "0.33"
dotenvy = "0.15"
