[package]
name = "rpi-commander"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
shared-types = { path = "../shared-types" }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
rumqttc = "0.25"
anyhow = "1.0"
env_logger = "0.11"
log = "0.4"
dotenvy = "0.15"
rustyline = "14.0"
tokio-util = "0.7"
