[package]
name = "rpi-processor"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
shared-types = { path = "../shared-types" }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
rumqttc = { version = "0.25", features = ["use-rustls"] }
anyhow = "1.0"
env_logger = "0.11"
log = "0.4"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
dotenvy = "0.15"
circular-queue = "0.2.7"
